fix: vertical align for buttons

--- a/packages/ui/assets/css/components/icon.css
+++ b/packages/ui/assets/css/components/icon.css
@@ -2,4 +2,5 @@
 .aw-icon {
     color: inherit;
     fill: currentColor;
+    vertical-align: middle;
 }
